--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 			<div class="nav-menu-hash"></div>
 		</div>
 		<ul id="nav-menu-list">
-			<li><a href="#section-home" class="nav-link">Home</a></li>
+			<li><a href="#section-profile" class="nav-link">Home</a></li>
 			<li><a href="#section-training" class="nav-link">Training</a></li>
 			<li><a href="#section-contact" class="nav-link">Contact</a></li>
 			<li><a href="/" class="nav-link">Blog</a></li>
@@ -30,98 +30,104 @@
 	</nav>
 	<!-- end navigation -->
 
+	<!-- start content flex-container -->
+	<div class="flex-container">
 
-	<!-- start profile section -->
-	<section id="section-profile">		
-		<div id="profile-top">
-			<h1>Dominique L. Johnson, Sr.</h1>
-			<img class="img-profile" src="img/dljsr.webp" alt="Dominique L. Johnson, Sr.">
-			<h2 class="h4">Full-Stack Web Developer</h2>
-		</div>
-		<div id="skill-icons">
-			<div class="flex-container">
-				<div class="skill-icon">
-					<!-- Icons made Pixel Buddha https://www.flaticon.com/authors/pixel-buddha" -->
-					<img class="img-skill-icon" src="img/html5.svg" alt="HTML5 Logo">
+		<!-- start profile section -->
+		<section id="section-profile">
+			<div class="section-border">
+				<div id="profile-top">
+					<h1>Dominique L. Johnson, Sr.</h1>
+					<img class="img-profile" src="img/dljsr.webp" alt="Dominique L. Johnson, Sr.">
+					<span class="h4">Full-Stack Web Developer</span>
 				</div>
-				<div class="skill-icon">
-					<!-- <div>Icons made by Pixel perfect "https://www.flaticon.com/authors/pixel-perfect" -->
-					<img class="img-skill-icon" src="img/css3.svg" alt="CSS3 Logo">
-				</div>
-				<div class="skill-icon">
-					<img class="img-skill-icon" src="img/javascript.webp" alt="JavaScript Logo">
-				</div>
-				<div class="skill-icon">
-					<img class="img-skill-icon" src="img/react.webp" alt="React Logo">
-					<!-- <div>Icons made by Freepik "https://www.flaticon.com/authors/freepik" -->
+				<div id="skill-icons">
+					<div class="flex-container">
+						<div class="skill-icon">
+							<!-- Icons made Pixel Buddha https://www.flaticon.com/authors/pixel-buddha" -->
+							<img class="img-skill-icon" src="img/html5.svg" alt="HTML5 Logo">
+						</div>
+						<div class="skill-icon">
+							<!-- <div>Icons made by Pixel perfect "https://www.flaticon.com/authors/pixel-perfect" -->
+							<img class="img-skill-icon" src="img/css3.svg" alt="CSS3 Logo">
+						</div>
+						<div class="skill-icon">
+							<img class="img-skill-icon" src="img/javascript.webp" alt="JavaScript Logo">
+						</div>
+						<div class="skill-icon">
+							<img class="img-skill-icon" src="img/react.webp" alt="React Logo">
+							<!-- <div>Icons made by Freepik "https://www.flaticon.com/authors/freepik" -->
+						</div>
+					</div>
+					<div class="flex-container">
+						<div class="skill-icon">
+							<img class="img-skill-icon" src="img/java.svg" alt="Java Logo">
+						</div>
+						<div class="skill-icon">
+							<img class="img-skill-icon" src="img/spring.webp" alt="Java Spring Boot + Mavan Logo">
+						</div>
+						<div class="skill-icon">
+							<img class="img-skill-icon" src="img/thymeleaf.webp" alt="Thymeleaf Logo">
+						</div>
+						<div class="skill-icon">
+							<img class="img-skill-icon" src="img/bootstrap.svg" alt="Bootstrap Logo">
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="flex-container">
-				<div class="skill-icon">
-					<img class="img-skill-icon" src="img/java.svg" alt="Java Logo">
+		</section>
+		<!-- end profile card -->
+
+
+		<!-- start training section -->
+		<section id="section-training">
+			<div id="training">
+				<h2>Training</h2>
+				<div class="training-text-block">
+					<p class="h5">CodeWork Academy Java Bootcamp</p>
+					<p>Full-Stack Java Web Development</p>
+					<p>June 2018</p>
 				</div>
-				<div class="skill-icon">
-					<img class="img-skill-icon" src="img/spring.webp" alt="Java Spring Boot + Mavan Logo">
+				<div class="training-text-block">
+					<p class="h5">University of Maryland, UC</p>
+					<p>Masters of Science - Project Management</p>
+					<p>May 2011</p>
 				</div>
-				<div class="skill-icon">
-					<img class="img-skill-icon" src="img/thymeleaf.webp" alt="Thymeleaf Logo">
-				</div>
-				<div class="skill-icon">
-					<img class="img-skill-icon" src="img/bootstrap.svg" alt="Bootstrap Logo">
+				<div class="training-text-block">
+					<p class="h5">Howard University</p>
+					<p>Bachelors of Arts - Social Sciences</p>
+					<p>May 2003</p>
 				</div>
 			</div>
-		</div>
-	</section>
-	<!-- end profile card -->
+		</section>
+		<!-- end training section -->
 
 
-	<!-- start training section -->
-	<section id="section-training">
-		<div id="training">
-			<h2>Training</h2>
-			<div class="training-text-block">
-				<p class="h5">CodeWork Academy Java Bootcamp</p>
-				<p>Full-Stack Java Web Development</p>
-				<p>June 2018</p>
-			</div>
-			<div class="training-text-block">
-				<p class="h5">University of Maryland, UC</p>
-				<p>Masters of Science - Project Management</p>
-				<p>May 2011</p>
-			</div>
-			<div class="training-text-block">
-				<p class="h5">Howard University</p>
-				<p>Bachelors of Arts - Social Sciences</p>
-				<p>May 2003</p>
-			</div>
-		</div>
-	</section>
-	<!-- end training section -->
+		<!-- start contact section -->
+		<section id="section-contact">
+			<h2>Contact Me</h2>
+			<form action="" id="form-contact">
+				<label for="name">Name:</label>
+				<input type="text" name="name" id="name" placeholder="Johnnie Ann Doe?" required>
+				<label for="email">Email:</label>
+				<input type="email" name="email" id="email" placeholder="you@somewhere.com" required>
+				<label for="message">Message:</label>
+				<textarea name="message" id="message" placeholder="Talk to me..." required></textarea>
+				<input type="submit" value="Submit">
+			</form>
 
-
-	<!-- start contact section -->
-	<section id="section-contact">
-		<h2>Contact Me</h2>
-		<form action="" id="form-contact">
-			<label for="name">Name:</label>
-			<input type="text" name="name" id="name" placeholder="Johnnie Ann Doe?" required>
-			<label for="email">Email:</label>
-			<input type="email" name="email" id="email" placeholder="you@somewhere.com" required>
-			<label for="message">Message:</label>
-			<textarea name="message" id="message" placeholder="Talk to me..." required></textarea>
-			<input type="submit" value="Submit">
-		</form>
-
-	</section>
-	<!-- end contact section -->
-	
-	
-	<!-- start sliding triangles @ bottom-->
-	<div id="slide-img">
-		<div id="slide-img-left"></div>
-		<div id="slide-img-right"></div>		
+		</section>
+		<!-- end contact section -->
+		
 	</div>
-	<!-- end sliding triangles @ bottom-->
+	<!-- end content flex-container -->
+
+
+	<!-- start footer -->
+	<footer id="footer">
+		<p>&copy; 2019 - 2020 All Rights Reserved</p>
+	</footer>
+	<!-- end footer -->
 
 	
 	<!-- start social section -->
@@ -139,11 +145,6 @@
 	</div>
 	<!-- end social section -->
 
-	<!-- start footer -->
-	<footer id="footer">
-		<p>&copy; 2019 - 2020 All Rights Reserved</p>
-	</footer>
-	<!-- end footer -->
 
 	<!-- SCRIPTS -->
 	<script src="js/components.js"></script>
